# Raytracer

./: .gitignore  CMakeLists.txt  Main.cpp  Makefile  README.md  Raytracer.sln
.kdev4/: Raytracer.kdev4
Raytracer/: Raytracer.vcxproj
VSProject/: Raytracer.sln  Raytracer.vcxproj  Raytracer.vcxproj.filters
source/: Camera.cpp  Camera.h  Main.cpp  Object.h  Ray.cpp  Ray.h  Raytracer.cpp  Raytracer.h  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h
src/: Camera.cpp  Camera.h  Dielectric.cpp  Dielectric.h  DirectionalLight.cpp  DirectionalLight.h  IntersectionData.cpp  IntersectionData.h  Lambertian.cpp  Lambertian.h  Light.cpp  Light.h  MCG_GFX_Lib.cpp  MCG_GFX_Lib.h  Main.cpp  Material.cpp  Material.h  Metal.cpp  Metal.h  Object.cpp  Object.h  Plane.cpp  Plane.h  Ray.cpp  Ray.h  Raytracer.cpp  Raytracer.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.cpp.autosave  Scene.h  Sphere.cpp  Sphere.h  SphericalLight.cpp  SphericalLight.h  Texture.cpp  Texture.h  ThreadManager.cpp  ThreadManager.h
